@@ -8,6 +8,7 @@ Cacti CHANGELOG
 -bug#0001414: COMMENT field can cause rrdtool to report "Legend too long"
 -bug#0001492: RRDTool 1.3 series fonts (fontconfig) support
 -bug#0001600: Default action on lists should be "None"
+-bug#0002232: poller_graphs_reapply_names.php requires -id=All when -id=all should work also
 -bug: GRPINT now supporting AVERAGE, LAST, MAX and MIN correctly (MAX of MAX, MAX of AVERAGEs now possible)
 -bug: Logarithmic Scaling and units-si dependencies fixed (thanks to ke6oms)
 -bug: allow empty [upper|lower]_limit even without autoscaling
